json-server 자동 실행

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "styled-components": "^6.1.19"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start | json-server --watch data/db.json --port 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
